# bulletin_board

./: .env sample  README.md  docker-compose.yaml  fixtures.json  pyproject.toml  setup.cfg
ads/: admin.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_ad_image.py  0003_alter_ad_created_at_alter_ad_updated_at_and_more.py  0004_alter_ad_updated_at_alter_review_updated_at.py
ads/tests/: conftest.py  test_ad_views.py  test_models.py  test_review_views.py  test_user_views.py
announcements/: models.py  serializers.py  urls.py  views.py
announcements/migrations/: 0002_remove_announcement_is_published.py
config/: settings.py  urls.py
users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0002_user_uid.py  0003_alter_user_uid.py  0004_alter_user_uid.py
