[tool.poetry]
name = "bulletin-board"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.6.0"
pillow = "^11.0.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
django-phonenumber-field = { extras = ["phonenumberslite"], version = "^8.0.0" }
celery = "^5.4.0"
redis = "^5.2.1"
gevent = "^24.11.1"
drf-yasg = "^1.21.8"

[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"

[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
